--- a/PROJETOS/02 SITE DE ANIME/style.css
+++ b/PROJETOS/02 SITE DE ANIME/style.css
@@ -5,6 +5,21 @@
     margin-right: 50px;
 }
 
+header{
+    margin-top: 50px;
+    background-color: blue;
+    padding-bottom: 100px;
+    text-align: center;
+    color: aliceblue;
+    
+    
+}
+
+.alinhar{
+    position: relative;
+    transform: translateY(110%);
+}
+
 .capa_container{
 
     margin-top: 100px;
