--- a/PROJETOS/02 SITE DE ANIME/style.css
+++ b/PROJETOS/02 SITE DE ANIME/style.css
@@ -1,18 +1,22 @@
 *{
     margin: 0;
     padding: 0;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 header{
-    margin-top: 50px;
-    background-color: blue;
+ 
+    background-image: linear-gradient(blue,black);
     padding-bottom: 100px;
     text-align: center;
     color: aliceblue;
     
     
+}
+.margem-corpo{
+    margin-left: 100mm;
+    margin-right: 100mm;
 }
 
 .alinhar{
@@ -25,4 +29,26 @@ header{
     margin-top: 100px;
     display: flex;
     justify-content: center;
+}
+
+nav{
+    box-shadow: 0px, 7px ,7px rgba(0, 0, 0, 0.2);
+    background-color: rgb(89, 89, 255);
+    text-align: center;
+    padding: 10px;
+    
+}
+
+nav > a{
+    color: white;
+    font-family: 'Times New Roman', Times, serif, Arial, Helvetica, sans-serif;
+    padding: 15px;
+    font-size: 20px;
+    transition-duration: 0.5s;
+    text-decoration: none;
+
+}
+
+nav a:hover{
+    background-color: rgb(9, 22, 139);
 }
