--- a/PROJETOS/02 SITE DE ANIME/style.css
+++ b/PROJETOS/02 SITE DE ANIME/style.css
@@ -26,9 +26,14 @@ header{
 
 .capa_container{
 
-    margin-top: 100px;
-    display: flex;
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    padding-top: 10px;
     justify-content: center;
+}
+.espaco_lados{
+    padding: 20px;
 }
 
 nav{
