--- a/PROJETOS/02 SITE DE ANIME/style.css
+++ b/PROJETOS/02 SITE DE ANIME/style.css
@@ -14,6 +14,11 @@ header{
     
     
 }
+.ajustar{
+    display: block;
+    padding-top: 20px;
+    max-width: 100%;
+}
 .margem-corpo{
     margin-left: 100mm;
     margin-right: 100mm;
@@ -26,9 +31,7 @@ header{
 
 .capa_container{
 
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
+
     padding-top: 10px;
     justify-content: center;
 }
