--- a/PROJETOS/02 SITE DE ANIME/style.css
+++ b/PROJETOS/02 SITE DE ANIME/style.css
@@ -11,6 +11,10 @@
    display: block;
 }
 
+picture h2{
+    text-align: center;
+}
+
 .texto_art{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
@@ -30,10 +34,8 @@
 
 picture{
     margin-right: 5mm;
-    border-width: 10px;
-    border-style:outset;
-    border-color: orange;
-    padding: 5px;
+    background-color: rgb(115, 115, 252);
+    
 }
 
 
@@ -60,7 +62,7 @@ picture{
     text-align: justify;
 }
 
-.art_onepiece h2, h3{
+.art_animes h2, h3{
     margin-top: 3mm;
     margin-bottom: 3mm;
 }
@@ -69,6 +71,23 @@ picture{
     display: flex;
     align-items: center;
     justify-content: flex-start
+}
+.container_art picture{
+    transition-property: all;
+    transition-duration: 0.5s;
+}
+
+.container_art h2{
+    color: white;
+}
+
+.container_art{
+    background-color: rgb(210, 210, 246);
+    padding: 15px 0px 15px 15px;
+    /* cima direta baixo esquerda */
+}
+.container_art picture:hover{
+    padding: 10px;
 }
 
 
